# QAmp

./: CMakeLists.txt  Makefile.qt4  Makefile.qt5  QAmp.cpp  QAmp.h  README  amp.c  amp.h  manifest.ttl  qamp-audio.c  qamp-gui.cpp  qamp.c  qamp.ttl  qamp_gui.cpp
test/: MainWindow.cpp  MainWindow.h  main-test.cpp
